--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,9 @@
 h1, h2, h3 {
     color: darkgreen;
-    font-size: 1.5rem;
+    font-size: 2rem;
 }
+p {
+    color: green;
+    font-size: 1rem;
+}
+.sections
