--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,24 @@
-h1, h2, h3 {
+body {
+    margin: 0;
+    padding: 0;
+}
+h1 {
     color: darkgreen;
     font-size: 2rem;
 }
-p {
-    color: green;
+h2 {
+    color: darkgreen;
+    font-size: 1.5rem;
+}
+h3 {
+    color:darkgreen;
     font-size: 1rem;
 }
-.sections
+p {
+    color: green;
+    font-size: 0.7rem;
+}
+.sections {
+    background-color: beige;
+    padding: 50px;
+    }
