--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&display=swap');
+
+/* Asterisk wildcard selector to override default styles added by the browser */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+/* General styles */
 body {
     margin: 0;
     padding: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 h1 {
     color: darkgreen;
@@ -15,16 +27,25 @@ h3 {
     font-size: 1rem;
 }
 p {
-    color: green;
-    font-size: 0.7rem;
+    color: darkgreen;
+    font-size: 1rem;
 }
 .sections {
     background-color: beige;
     padding: 50px;
     }
 .picture {
-    background: url(../images/istockphoto-684090194-612x612.jpg) no-repeat left;
-    margin: 0; 
-    width: 50%;
-    height: 500px;
+    background: url(../images/pexels-tomasz-filipek-1630039.jpg) no-repeat center center / cover;
+    width: 100%; 
+    height: 85vh;
+    position: relative;
+}
+.cover-picture {
+    background-color: rgba(205, 209, 228, 0.8);
+    position: absolute;
+    padding: 15px;
+    right: 50px;
+    top: 35px;
+    text-align: center;
+    flex-wrap: wrap;
 }
