--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,16 +30,19 @@ p {
     color: darkgreen;
     font-size: 1rem;
 }
+/* general styling*/
 .sections {
     background-color: beige;
     padding: 50px;
     }
+    /* background picture for header*/
 .picture {
     background: url(../images/pexels-tomasz-filipek-1630039.jpg) no-repeat center center / cover;
     width: 100%; 
     height: 85vh;
     position: relative;
 }
+/* cover-text for picture */
 .cover-picture {
     background-color: rgba(205, 209, 228, 0.8);
     position: absolute;
@@ -48,4 +51,23 @@ p {
     top: 35px;
     text-align: center;
     flex-wrap: wrap;
+}
+nav {
+    display: flex;
+    justify-content: flex-end;
+    align-content: center;
+    padding: 25px 15px 25px 25px;
+    background-color: beige;
+    }
+nav li {
+    display: inline;
+    padding-left: 1rem;
+    }
+a {
+    color: darkgreen;
+    font-size: 30px;
+    text-decoration: none;
+}
+a:hover {
+    color: blue
 }
