--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,9 +8,10 @@
 }
 /* General styles */
 body {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
-    min-height: 100vh;
+    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -41,6 +42,7 @@ p {
     width: 100%; 
     height: 85vh;
     position: relative;
+    border: 2px solid darkgreen;
 }
 /* cover-text for picture */
 .cover-picture {
@@ -51,15 +53,18 @@ p {
     top: 35px;
     text-align: center;
     flex-wrap: wrap;
+    border: 1px solid beige;
 }
+
 nav {
     display: flex;
     justify-content: flex-end;
     align-content: center;
     padding: 25px 15px 25px 25px;
     background-color: beige;
+    border: 2px solid darkgreen
     }
-nav li {
+nav a {
     display: inline;
     padding-left: 1rem;
     }
@@ -69,5 +74,6 @@ a {
     text-decoration: none;
 }
 a:hover {
-    color: blue
+    border-bottom: 2px solid blue;
 }
+
