--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&display=swap');
-
 /* Asterisk wildcard selector to override default styles added by the browser */
 * {
     margin: 0;
@@ -13,7 +11,9 @@ body {
     height: 100%;
     width: 100%;
     display: flex;
+    font-family:Georgia, 'Times New Roman', Times, serif;
     flex-direction: column;
+    
 }
 h1 {
     color: darkgreen;
@@ -34,7 +34,6 @@ p {
 /* general styling*/
 .sections {
     background-color: beige;
-    padding: 50px;
     }
     /* background picture for header*/
 .picture {
@@ -56,7 +55,7 @@ p {
     border: 1px solid beige;
     border-radius: 20px;
 }
-
+/* Styling for Navbar*/
 nav {
     display: flex;
     justify-content: flex-end;
@@ -76,5 +75,23 @@ a {
 }
 a:hover {
     border-bottom: 2px solid blue;
+}
+/* About us section*/
+#about {
+    padding: 100px;
+    text-align: left;
+    border: 2px solid darkgreen;
+    padding-left: 90px;
+    background: url(../images/pexels-karolina-grabowska-6478126.jpg)no-repeat center center / cover;
+}
+.about-cover {
+    background-color: rgba(205, 209, 228, 0.8);
+    border: 1px solid beige;
+    border-radius: 20px;
+    padding: 50px;
+}
+#about h2, #about p {
+    color: white;
+    font-weight: bolder;
 }
 
