--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,19 +17,19 @@ body {
 }
 h1 {
     color: darkgreen;
-    font-size: 2rem;
+    font-size: 1.3rem;
 }
 h2 {
     color: darkgreen;
-    font-size: 1.5rem;
+    font-size: 1rem;
 }
 h3 {
     color:darkgreen;
-    font-size: 1rem;
+    font-size: 0.9rem;
 }
 p {
     color: darkgreen;
-    font-size: 1rem;
+    font-size: 0.7rem;
 }
 /* general styling*/
 .sections {
@@ -47,13 +47,13 @@ p {
 .cover-picture {
     background-color: rgba(205, 209, 228, 0.8);
     position: absolute;
-    padding: 15px;
-    right: 50px;
-    top: 35px;
+    padding: 5px;
+    right: 10px;
+    top: 5px;
     text-align: center;
     flex-wrap: wrap;
     border: 1px solid beige;
-    border-radius: 20px;
+    border-radius: 10px;
 }
 /* Styling for Navbar*/
 nav {
@@ -70,7 +70,7 @@ nav a {
     }
 a {
     color: darkgreen;
-    font-size: 30px;
+    font-size: 1rem;
     text-decoration: none;
 }
 a:hover {
@@ -78,10 +78,9 @@ a:hover {
 }
 /* About us section*/
 #about {
-    padding: 100px;
+    padding: 10px;
     text-align: left;
     border: 2px solid darkgreen;
-    padding-left: 90px;
     background-color: beige;
 }
 .about-cover {
@@ -90,6 +89,7 @@ a:hover {
     border-radius: 20px;
     padding: 50px;
     color: #fafafa;
+    font-size: 0.7rem;
 }
 .about-cover h3 {
     color: #fafafa;
@@ -97,4 +97,33 @@ a:hover {
 
 @media screen and (min-width: 768px) {
 
+    .cover-picture {
+        padding: 15px;
+        right: 50px;
+        top: 35px;
+        border-radius: 20px;
+    }
+    #about {
+        padding:100px;
+        padding-left: 90px;
+    }
+
+    h1 {
+        font-size: 2rem;
+    }
+    h2 {
+        font-size: 1.5rem;
+    }
+    h3 {
+        font-size: 1rem;
+    }
+    p {
+        font-size: 1rem;
+    }
+    .about-cover {
+        font-size: 1rem;
+    }
+    a {
+        font-size: 30px;
+    }
 }
