styling form attribute. Signup section with css and making it responsive.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,6 +95,27 @@ a:hover {
     color: #fafafa;
 }
 
+#signup {
+    background: url(../images/pexels-photo-17213802.webp)no-repeat center center / cover;
+    color: beige;
+    padding: 40px;
+}
+#signup h3 {
+    color: beige;
+}
+input {
+    border-radius: 5px;
+    font-size: 1rem;
+    border: 1px solid red;
+    background-color: beige;
+    opacity: 0.7;
+}
+.submit-size {
+    font-size: 1rem;
+    border: 1px solid red;
+    border-radius: 5px;
+    background-color: beige;
+}
 @media screen and (min-width: 768px) {
 
     .cover-picture {
@@ -125,5 +146,28 @@ a:hover {
     }
     a {
         font-size: 30px;
+    }
+    #signup {
+        font-size: 2.5rem;
+        padding-left: 100px;
+        padding-top: 30vh;
+        padding-bottom: 30vw;
+        display: block;
+        justify-content: center;
+    
+    }
+    #signup h3 {
+        font-size: 3rem;
+    }
+    .submit-size {
+        font-size: 2rem;
+        border: 2px solid red;
+        border-radius: 10px;
+        background-color: beige;
+    }
+    input {
+        border-radius: 10px;
+        font-size: 1.5rem;
+        border: 2px solid red;
     }
 }
