--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,13 +106,13 @@ a:hover {
 input {
     border-radius: 5px;
     font-size: 1rem;
-    border: 1px solid red;
+    border: 1px solid darkgreen;
     background-color: beige;
     opacity: 0.7;
 }
 .submit-size {
     font-size: 1rem;
-    border: 1px solid red;
+    border: 1px solid darkgreen;
     border-radius: 5px;
     background-color: beige;
 }
@@ -161,13 +161,13 @@ input {
     }
     .submit-size {
         font-size: 2rem;
-        border: 2px solid red;
+        border: 2px solid darkgreen;
         border-radius: 10px;
         background-color: beige;
     }
     input {
         border-radius: 10px;
         font-size: 1.5rem;
-        border: 2px solid red;
+        border: 2px solid darkgreen;
     }
 }
