--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,6 +116,18 @@ input {
     border-radius: 5px;
     background-color: beige;
 }
+footer {
+margin: 0;
+}
+#contact {
+    background-color: beige;
+    text-align: center;
+    padding: 100px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
 @media screen and (min-width: 768px) {
 
     .cover-picture {
