--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,13 +121,18 @@ margin: 0;
 }
 #contact {
     background-color: beige;
-    text-align: center;
     padding: 100px;
     display: flex;
     flex-direction: column;
     gap: 30px;
+    text-align: center;
 }
-
+#contact h2 {
+    font-size: 1.2rem;
+}
+#contact p {
+    font-size: 0.7rem;
+}
 @media screen and (min-width: 768px) {
 
     .cover-picture {
@@ -181,5 +186,11 @@ margin: 0;
         border-radius: 10px;
         font-size: 1.5rem;
         border: 2px solid darkgreen;
+    }
+    #contact h2{
+        font-size: 2.5rem;
+    }
+    #contact p {
+        font-size: 1.5rem;
     }
 }
