--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,6 +133,9 @@ margin: 0;
 #contact p {
     font-size: 0.7rem;
 }
+.social-networks {
+    
+}
 @media screen and (min-width: 768px) {
 
     .cover-picture {
