adding class social-networks in css for styling font icons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,7 +134,8 @@ margin: 0;
     font-size: 0.7rem;
 }
 .social-networks {
-    
+    display: flex;
+    gap: 30px
 }
 @media screen and (min-width: 768px) {
 
