--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,7 +163,9 @@ margin: 0;
         padding:100px;
         padding-left: 90px;
     }
-
+    .center {
+        text-align: center;
+    }
     h1 {
         font-size: 2rem;
     }
