--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,6 @@ p {
     width: 100%; 
     height: 85vh;
     position: relative;
-    border: 2px solid darkgreen;
 }
 /* cover-text for picture */
 .cover-picture {
@@ -60,7 +59,6 @@ nav {
     align-content: center;
     padding: 25px 15px 25px 25px;
     background-color: beige;
-    border: 2px solid darkgreen
     }
 nav a {
     display: inline;
@@ -79,7 +77,6 @@ a:hover {
 #about {
     padding: 10px;
     text-align: left;
-    border: 2px solid darkgreen;
     background-color: beige;
 }
 /* course content*/
@@ -100,7 +97,7 @@ a:hover {
 }
 /* sign up section*/
 #signup {
-    background: url(../images/pexels-photo-17213802.webp)no-repeat center center / cover;
+    background: url(../images/pexels-lumn-294674.jpg)no-repeat center center / cover;
     color: beige;
     padding: 40px;
 }
@@ -196,14 +193,12 @@ margin: 0;
     }
     .submit-size {
         font-size: 2rem;
-        border: 2px solid darkgreen;
         border-radius: 10px;
         background-color: beige;
     }
     input {
         border-radius: 10px;
         font-size: 1.5rem;
-        border: 2px solid darkgreen;
     }
     #contact h2{
         font-size: 2.5rem;
