--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ p {
 .picture {
     background: url(../images/pexels-tomasz-filipek-1630039.jpg) no-repeat center center / cover;
     width: 100%; 
-    height: 70vh;
+    height: 60vh;
     position: relative;
 }
 /* cover-text for picture */
@@ -56,8 +56,7 @@ p {
 nav {
     display: flex;
     justify-content: flex-end;
-    align-content: center;
-    padding: 25px 15px 25px 25px;
+    padding: 20px 15px 20px 20px;
     background-color: beige;
     }
 nav a {
@@ -146,7 +145,9 @@ margin: 0;
 }
 /*Responsive styling for bigger screens*/
 @media screen and (min-width: 768px) {
-
+    .picture {
+        height: 85vh;
+    }
     .cover-picture {
         padding: 15px;
         right: 60px;
