--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ p {
     }
     /* background picture for header*/
 .picture {
-    background: url(../images/pexels-tomasz-filipek-1630039.jpg) no-repeat center center / cover;
+    background: url(../images/two-men-fishing.jpg) no-repeat center center / cover;
     width: 100%; 
     height: 60vh;
     position: relative;
@@ -93,7 +93,7 @@ a:hover {
 
 /* sign up section*/
 #signup {
-    background: url(../images/pexels-lumn-294674.jpg)no-repeat center center / cover;
+    background: url(../images/man-holding-fishing-rod.jpg)no-repeat center center / cover;
     color: black;
     padding: 40px;
 }
