--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,6 +113,7 @@ input {
     border: 1px solid darkgreen;
     background-color: beige;
     opacity: 0.7;
+    color: black; 
 }
 .submit-size {
     font-size: 1rem;
