--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,6 +120,7 @@ input {
     border-radius: 5px;
     background-color: beige;
     color: black; 
+    padding: 0.5px;
 }
 /* General footer styling*/
 footer {
