--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,6 +113,7 @@ input {
     border: 1px solid darkgreen;
     background-color: beige;
     opacity: 0.7; 
+    color: black; 
 }
 .submit-size {
     font-size: 1rem;
@@ -120,7 +121,6 @@ input {
     border-radius: 5px;
     background-color: beige;
     color: black; 
-    padding: 0.5px;
 }
 /* General footer styling*/
 footer {
